@@ -6,3 +6,4 @@ copyright_year      = 2010
 
 [@DOHERTY]
 skip_tests = SynopsisTests
+no_twitter = 1
